welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:18: error: type mismatch;
 found   : Unit
 required: Int
	nbAdos =0
               ^